Corrected vertical spacing of content subsections.

--- a/jekyll-site-src/_sass/_base.scss
+++ b/jekyll-site-src/_sass/_base.scss
@@ -81,7 +81,7 @@ hr {
   width: 100%;
   height: 0px;
   line-height: 0px;
-  margin: 48px 0 100px 0;
+  margin: 72px 0 72px 0;
   padding: 0;
   border-bottom: 1px solid rgba(0,0,0,0.2);
 }
