--- a/jekyll-site-src/_sass/_icons.scss
+++ b/jekyll-site-src/_sass/_icons.scss
@@ -39,6 +39,7 @@ footer {
 // The icon wrapping list style
 ul.icon-list {
   margin-top: 32px;
+  margin-bottom: -16px;
   list-style-type: none;
   padding-left: 0;
   line-height: 0;
